# S21-WendexTaxi

./: CMakeLists.txt  Coordinates.h  LICENSE  README.md  WendexMaps.h  WendexTaxi.h  main.cpp
Cars/: Business.cpp  Business.h  Car.cpp  Car.h  CarColor.h  CarType.h  Comfort.cpp  Comfort.h  ComfortPlus.cpp  ComfortPlus.h  Economy.cpp  Economy.h
DataBase/: DataBase.cpp  DataBase.h
Gateways/: DriverGateway.cpp  DriverGateway.h  PassengerGateway.cpp  PassengerGateway.h
Gateways/AdminGateway/: AdminGateway.cpp  AdminGateway.h
Gateways/DriverGateway/: DriverGateway.cpp  DriverGateway.h
Gateways/PassengerGateway/: PassengerGateway.cpp  PassengerGateway.h
MobileApp/Cars/: Car.cpp  Car.h  CarType.h
MobileApp/Orders/: Order.cpp  Order.h  PaymentMethods.h
MobileApp/Users/: User.cpp  User.h  UserFunctions.h
MobileApp/Users/Admin/: Admin.cpp  Admin.h
MobileApp/Users/Driver/: Driver.cpp  Driver.h
MobileApp/Users/Passenger/: Passenger.cpp  Passenger.h
Orders/: Order.cpp  Order.h
Server/: Server.cpp  Server.h
Service/: System.cpp  System.h
Users/: Driver.cpp  Driver.h  Passenger.cpp  Passenger.h  User.cpp  User.h
WendexMaps/: Address.cpp  Address.h  Coordinates.h
WendexMoney/: PaymentMethods.h
